@@ -6,7 +6,8 @@
 */
 
 return array (
-  'Enter'  => 'Введите',
-  'Select' => 'Выберите',
-  'Pick'   => 'Укажите',
+  'Enter'     => 'Введите',
+  'Select'    => 'Выберите',
+  'Pick'      => 'Укажите',
+  'x clear'   => 'очистить',
 );
